# crazy-battle

./: .gitignore  CMakeLists.txt  CrazyBattle.sln  CrazyBattle.uproject  LICENSE  readme.md  snapcraft.yaml
AssetSource/: sprites.paper2dsprites
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/: BasicAttack_BP.uasset  CBCameraController_BP.uasset  CBCameraPawn_BP.uasset  CBGameMode_BP.uasset  CBPaperCharacter_BP.uasset  CBPawn_BP.uasset
Content/Maps/: frontend.umap  game_end.umap  game_map.umap
Content/Sprites/: Common_Controller.uasset  Common_Controller_Sprite.uasset  Keyboard-icon_left.uasset  Keyboard-icon_right.uasset  gamepad_back.uasset  gamepad_start.uasset  key_downarrow.uasset  key_s.uasset  key_uparrow.uasset  key_w.uasset  keyboard_num7.uasset  keyboard_num9.uasset  keyboard_u.uasset  keyboard_y.uasset  sprites.uasset
Content/Sprites/Animations/: A_ArcheologistAttack.uasset  A_BasicAttack.uasset  A_GenericExplosion.uasset  A_Idle.uasset  A_JumpDown.uasset  A_JumpLand.uasset  A_JumpMidAir.uasset  A_JumpUp.uasset  A_PlayerExplosion.uasset  A_Walk.uasset  A_WaspAttack.uasset  A_run.uasset
Content/Sprites/Frames/: a_button_png.uasset  b_button_png.uasset  back_button_png.uasset  down_button_png.uasset  dpad_button_png.uasset  fx_bling_anim_00_png.uasset  fx_bling_anim_01_png.uasset  fx_bling_anim_02_png.uasset  fx_bling_anim_03_png.uasset  fx_bling_anim_04_png.uasset  fx_bling_anim_05_png.uasset  fx_bling_anim_06_png.uasset  fx_bling_anim_07_png.uasset  fx_bling_anim_08_png.uasset  fx_explosion_b_anim_00_png.uasset  fx_explosion_b_anim_01_png.uasset  fx_explosion_b_anim_02_png.uasset  fx_explosion_b_anim_03_png.uasset  fx_explosion_b_anim_04_png.uasset  fx_explosion_b_anim_05_png.uasset  fx_explosion_b_anim_06_png.uasset  fx_explosion_b_anim_07_png.uasset  fx_explosion_b_anim_08_png.uasset  fx_explosion_b_anim_09_png.uasset  fx_explosion_r_anim_00_png.uasset  fx_explosion_r_anim_01_png.uasset  fx_explosion_r_anim_02_png.uasset  fx_explosion_r_anim_03_png.uasset  fx_explosion_r_anim_04_png.uasset  fx_explosion_r_anim_05_png.uasset  fx_explosion_r_anim_06_png.uasset  fx_explosion_r_anim_07_png.uasset  fx_explosion_r_anim_08_png.uasset  fx_explosion_r_anim_09_png.uasset  home_button_png.uasset  icon_orbs_materials_00_png.uasset  icon_orbs_materials_01_png.uasset  icon_orbs_materials_02_png.uasset  icon_orbs_materials_03_png.uasset  icon_orbs_materials_04_png.uasset  (+112 more)
Content/Sprites/Textures/: sprites.uasset
Content/Sprites/UI/: UI-plx-1.uasset  UI-plx-1_Sprite.uasset  UI-plx-2.uasset  UI-plx-2_Sprite.uasset  UI-plx-3.uasset  UI-plx-3_Sprite.uasset  (+4 more)
Content/UI/: GameHud.uasset  JoinGameWidget.uasset  LobbyWidget.uasset  PlayerHudWidget.uasset  StartGameWidget.uasset
CrazyBattle/: .gitignore  CrazyBattle.csproj  Game1.cs  Program.cs  app.manifest
CrazyBattle/Properties/: AssemblyInfo.cs
Source/: CrazyBattle.Target.cs  CrazyBattleEditor.Target.cs
Source/CrazyBattle/: Attack.cpp  Attack.h  BasicAttack.cpp  BasicAttack.h  CBCameraController.cpp  CBCameraController.h  CBCameraPawn.cpp  CBCameraPawn.h  CBGameViewportClient.cpp  CBGameViewportClient.h  CBPaperCharacter.cpp  CBPaperCharacter.h  CBPawn.cpp  CBPawn.h  CBStatics.cpp  CBStatics.h  CrazyBattle.Build.cs  CrazyBattle.cpp  CrazyBattleGameInstance.cpp  CrazyBattleGameInstance.h  CrazyBattleGameMode.cpp  CrazyBattleGameMode.h  CrazyBattleGameModeBase.cpp  CrazyBattleGameModeBase.h  CrazyBattleGameState.cpp  CrazyBattleGameState.h
framework/: CMakeLists.txt
framework/include/: Game.h
framework/include/gf/: FrameworkExport.h  Game.h  GameMode.h  Renderer.h
framework/include/gf/components/: SpriteComponent.h
framework/include/gf/systems/: SpriteRendererSystem.h
framework/libs/entityx/: CMakeLists.txt
framework/libs/entityx/framework_cmake/: CMakeLists.txt
framework/src/: Game.cpp  GameMode.cpp  Renderer.cpp
framework/src/systems/: SpriteRendererSystem.cpp
libs/Box2D/crazy-battle_cmake/: CMakeLists.txt
libs/anax/crazy-battle_cmake/: CMakeLists.txt
media/: button_sprites.json  game_level.json  jungle_sprites.json  license.txt  opp2_animations.json  opp2_sprites.json
media/jungle_asset_pack/: license.txt
src/: AssetLoaderDefines.h  AssetLoaderHelper.cpp  AssetLoaderHelper.h  CrazyBattle.cpp  CrazyBattle.h  GameLevelLoader.cpp  GameLevelLoader.h  GameManager.cpp  GameManager.h  GameManagerDefines.h  GameModeData.cpp  GameModeData.h  GameModeDataDefines.h  GamePad.cpp  GamePad.h  GameTimer.cpp  GameTimer.h  InputManager.cpp  InputManager.h  main.cpp
src/components/: AnimatedSpriteComponent.h  AttackComponent.h  ChildComponent.h  LinearAttackComponent.h  PhysicsBodyComponent.h  PlayerComponent.h  PlayerDamageComponent.h  SineAttackComponent.h  SpriteComponent.h  TextureComponent.h  TimedLifeComponent.h  TransformComponent.h
src/states/: GameEndState.cpp  GameEndState.h  GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  State.h
src/systems/: AnimateSpriteRendererSystem.cpp  AnimateSpriteRendererSystem.h  AnimateSpriteUpdateSystem.cpp  AnimateSpriteUpdateSystem.h  ChildTransformSystem.cpp  ChildTransformSystem.h  GameBackgroundSystem.cpp  GameBackgroundSystem.h  GameModeSystem.cpp  GameModeSystem.h  LinearAttackSystem.cpp  LinearAttackSystem.h  PhysicsWorldSystem.cpp  PhysicsWorldSystem.h  PlayerAnimationSystem.cpp  PlayerAnimationSystem.h  PlayerAttackInputSystem.cpp  PlayerAttackInputSystem.h  PlayerDamageSystem.cpp  PlayerDamageSystem.h  PlayerEntitySpawnerSystem.cpp  PlayerEntitySpawnerSystem.h  PlayerMovementSystem.cpp  PlayerMovementSystem.h  SineAttackSystem.cpp  SineAttackSystem.h  SpriteRendererHelper.cpp  SpriteRendererHelper.h  SpriteRendererSystem.cpp  SpriteRendererSystem.h  TimedLifeSystem.cpp  TimedLifeSystem.h  UIPlayerHealthSystem.cpp  UIPlayerHealthSystem.h
src/ui/: ControlsScreen.cpp  ControlsScreen.h  HealthWidget.cpp  HealthWidget.h  TitleScreenLogo.cpp  TitleScreenLogo.h  UIEndGameScreen.cpp  UIEndGameScreen.h  UIPlayerHealth.cpp  UIPlayerHealth.h  UIPregame.cpp  UIPregame.h  UIRendererHelper.cpp  UIRendererHelper.h
(+12 files in other folders)
