set(BOX2D_ROOT_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/../Box2D/Box2D)

set(BOX2D_Collision_SRCS
	${BOX2D_ROOT_FOLDER}/Collision/b2BroadPhase.cpp
	${BOX2D_ROOT_FOLDER}/Collision/b2CollideCircle.cpp
	${BOX2D_ROOT_FOLDER}/Collision/b2CollideEdge.cpp
	${BOX2D_ROOT_FOLDER}/Collision/b2CollidePolygon.cpp
	${BOX2D_ROOT_FOLDER}/Collision/b2Collision.cpp
	${BOX2D_ROOT_FOLDER}/Collision/b2Distance.cpp
	${BOX2D_ROOT_FOLDER}/Collision/b2DynamicTree.cpp
	${BOX2D_ROOT_FOLDER}/Collision/b2TimeOfImpact.cpp
)
set(BOX2D_Collision_HDRS
	${BOX2D_ROOT_FOLDER}/Collision/b2BroadPhase.h
	${BOX2D_ROOT_FOLDER}/Collision/b2Collision.h
	${BOX2D_ROOT_FOLDER}/Collision/b2Distance.h
	${BOX2D_ROOT_FOLDER}/Collision/b2DynamicTree.h
	${BOX2D_ROOT_FOLDER}/Collision/b2TimeOfImpact.h
)
set(BOX2D_Shapes_SRCS
	${BOX2D_ROOT_FOLDER}/Collision/Shapes/b2CircleShape.cpp
	${BOX2D_ROOT_FOLDER}/Collision/Shapes/b2EdgeShape.cpp
	${BOX2D_ROOT_FOLDER}/Collision/Shapes/b2ChainShape.cpp
	${BOX2D_ROOT_FOLDER}/Collision/Shapes/b2PolygonShape.cpp
)
set(BOX2D_Shapes_HDRS
	${BOX2D_ROOT_FOLDER}/Collision/Shapes/b2CircleShape.h
	${BOX2D_ROOT_FOLDER}/Collision/Shapes/b2EdgeShape.h
	${BOX2D_ROOT_FOLDER}/Collision/Shapes/b2ChainShape.h
	${BOX2D_ROOT_FOLDER}/Collision/Shapes/b2PolygonShape.h
	${BOX2D_ROOT_FOLDER}/Collision/Shapes/b2Shape.h
)
set(BOX2D_Common_SRCS
	${BOX2D_ROOT_FOLDER}/Common/b2BlockAllocator.cpp
	${BOX2D_ROOT_FOLDER}/Common/b2Draw.cpp
	${BOX2D_ROOT_FOLDER}/Common/b2Math.cpp
	${BOX2D_ROOT_FOLDER}/Common/b2Settings.cpp
	${BOX2D_ROOT_FOLDER}/Common/b2StackAllocator.cpp
	${BOX2D_ROOT_FOLDER}/Common/b2Timer.cpp
)
set(BOX2D_Common_HDRS
	${BOX2D_ROOT_FOLDER}/Common/b2BlockAllocator.h
	${BOX2D_ROOT_FOLDER}/Common/b2Draw.h
	${BOX2D_ROOT_FOLDER}/Common/b2GrowableStack.h
	${BOX2D_ROOT_FOLDER}/Common/b2Math.h
	${BOX2D_ROOT_FOLDER}/Common/b2Settings.h
	${BOX2D_ROOT_FOLDER}/Common/b2StackAllocator.h
	${BOX2D_ROOT_FOLDER}/Common/b2Timer.h
)
set(BOX2D_Dynamics_SRCS
	${BOX2D_ROOT_FOLDER}/Dynamics/b2Body.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/b2ContactManager.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/b2Fixture.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/b2Island.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/b2World.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/b2WorldCallbacks.cpp
)
set(BOX2D_Dynamics_HDRS
	${BOX2D_ROOT_FOLDER}/Dynamics/b2Body.h
	${BOX2D_ROOT_FOLDER}/Dynamics/b2ContactManager.h
	${BOX2D_ROOT_FOLDER}/Dynamics/b2Fixture.h
	${BOX2D_ROOT_FOLDER}/Dynamics/b2Island.h
	${BOX2D_ROOT_FOLDER}/Dynamics/b2TimeStep.h
	${BOX2D_ROOT_FOLDER}/Dynamics/b2World.h
	${BOX2D_ROOT_FOLDER}/Dynamics/b2WorldCallbacks.h
)
set(BOX2D_Contacts_SRCS
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2CircleContact.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2Contact.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2ContactSolver.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2PolygonAndCircleContact.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2EdgeAndCircleContact.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2EdgeAndPolygonContact.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2ChainAndCircleContact.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2ChainAndPolygonContact.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2PolygonContact.cpp
)
set(BOX2D_Contacts_HDRS
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2CircleContact.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2Contact.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2ContactSolver.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2PolygonAndCircleContact.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2EdgeAndCircleContact.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2EdgeAndPolygonContact.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2ChainAndCircleContact.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2ChainAndPolygonContact.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Contacts/b2PolygonContact.h
)
set(BOX2D_Joints_SRCS
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2DistanceJoint.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2FrictionJoint.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2GearJoint.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2Joint.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2MotorJoint.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2MouseJoint.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2PrismaticJoint.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2PulleyJoint.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2RevoluteJoint.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2RopeJoint.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2WeldJoint.cpp
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2WheelJoint.cpp
)
set(BOX2D_Joints_HDRS
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2DistanceJoint.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2FrictionJoint.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2GearJoint.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2Joint.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2MotorJoint.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2MouseJoint.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2PrismaticJoint.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2PulleyJoint.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2RevoluteJoint.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2RopeJoint.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2WeldJoint.h
	${BOX2D_ROOT_FOLDER}/Dynamics/Joints/b2WheelJoint.h
)
set(BOX2D_Rope_SRCS
	${BOX2D_ROOT_FOLDER}/Rope/b2Rope.cpp
)
set(BOX2D_Rope_HDRS
	${BOX2D_ROOT_FOLDER}/Rope/b2Rope.h
)
set(BOX2D_General_HDRS
	${BOX2D_ROOT_FOLDER}/Box2D.h
)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../Box2D)

add_library(Box2D STATIC 
	${BOX2D_General_HDRS}
	${BOX2D_Joints_SRCS}
	${BOX2D_Joints_HDRS}
	${BOX2D_Contacts_SRCS}
	${BOX2D_Contacts_HDRS}
	${BOX2D_Dynamics_SRCS}
	${BOX2D_Dynamics_HDRS}
	${BOX2D_Common_SRCS}
	${BOX2D_Common_HDRS}
	${BOX2D_Shapes_SRCS}
	${BOX2D_Shapes_HDRS}
	${BOX2D_Collision_SRCS}
	${BOX2D_Collision_HDRS}
	${BOX2D_Rope_SRCS}
	${BOX2D_Rope_HDRS}
)

target_compile_features(Box2D PRIVATE cxx_range_for)
